# coherify

./: .claude_hooks_alt.json  .claude_hooks_linux.json  .claude_hooks_simple.json  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  BENCHMARK_REQUIREMENTS.md  CLAUDE.md  CURRENT_STATE.md  Dockerfile  Dockerfile.prod  FINAL_UI_STATUS.md  GETTING_STARTED.md  INSTALL.md  Makefile  OPERATIONAL_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  SHOGENJI_AND_API_COMPLETE.md  SHOGENJI_FIX_SUMMARY.md  TODO.md  UI_FIX_COMPLETE.md  UI_IMPLEMENTATION_SUMMARY.md  UI_OPTIMIZATION_SUMMARY.md  WARNINGS_FIXED.md  benchmark_results_real_data.json  demo_optimized_ui.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_ui.py  setup_venv.sh  test_approximation_simple.py  test_benchmark_fixes.py  test_ui_fix.py
coherify/: __init__.py  benchmark_runner.py
config/: benchmark_config.json  example.env
docs/: BENCHMARK_FIXES_SUMMARY.md  BENCHMARK_METHODOLOGY_AUDIT.md  BENCHMARK_REFERENCES.md  CODE_CLEANUP_SUMMARY.md  CRITICAL_IMPLEMENTATION_GAPS.md  CRITICAL_METHODOLOGY_FIX.md  DOCUMENTATION_STATUS.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LEGACY_ARCHITECTURE.md  LINTING_AND_FORMATTING.md  MODEL_CONFIGURATION.md  MULTI_FORMAT_BENCHMARKS.md  OPENAI_MODELS.md  OPERATIONAL_GUIDE.md  README.md  REAL_DATA_BENCHMARK_RESULTS.md  TROUBLESHOOTING.md  WORKFLOW.md  benchmark_compatibility.md
examples/: api_benchmarks_demo.py  api_providers_demo.py  approximation_algorithms.py  basic_usage.py  coherence_guided_generation.py  comprehensive_benchmark_demo.py  phase2_features.py  phase3_features.py  practical_applications.py  rag_integration.py  run_faithbench_benchmark.py  run_fever_benchmark.py  run_multi_format_benchmarks.py  run_truthfulqa_benchmark.py  test_fever_basic.py  test_multi_format_basic.py
results/: TruthfulQA_20250823_152401_f2d43e60.json  TruthfulQA_20250823_152444_098e5086.json  TruthfulQA_20250823_152444_098e5086.md  TruthfulQA_20250823_152451_02e63c51.json  TruthfulQA_20250823_152451_02e63c51.md  TruthfulQA_20250823_173221_47d09aa4.json  TruthfulQA_20250823_173221_47d09aa4.md  TruthfulQA_20250823_173230_1e74ebe7.json  TruthfulQA_20250823_173230_1e74ebe7.md  TruthfulQA_20250823_175543_5466431c.json  TruthfulQA_20250823_175543_5466431c.md  (+8 more)
ui/: README.md  (+6 more)
(+152 files in other folders)
