[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherify"
version = "0.1.0"
description = "Formal coherence theory for AI truth-seeking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nathan Lubchenco", email = "nathan@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "isort>=5.0",
    "autoflake>=2.0",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "safety>=2.0",
    "build>=0.10",
    "twine>=4.0",
]
benchmarks = [
    "lm-eval>=0.3.0",
    "evaluate>=0.3.0",
]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
    "pandas>=1.3.0",
]
api = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/nathanlubchenco/coherify"
"Bug Reports" = "https://github.com/nathanlubchenco/coherify/issues"
"Source" = "https://github.com/nathanlubchenco/coherify"

[tool.setuptools.packages.find]
where = ["."]
include = ["coherify*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for current codebase
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"